--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -15,12 +15,12 @@
       ]
     },
     {
-      "login": "montver",
-      "name": "montver",
-      "avatar_url": "https://avatars.githubusercontent.com/u/72754407?v=4",
-      "profile": "https://github.com/montver",
+      "login": "parvusdomus",
+      "name": "parvusdomus",
+      "avatar_url": "https://avatars.githubusercontent.com/u/71666845?v=4?s=100",
+      "profile": "https://github.com/parvusdomus",
       "contributions": [
-        "ideas"
+        "bugs"
       ]
     }
   ],
